jvector-native/src/main/cpp/src/jvector_gpupq.h

typedef struct jpq_dataset_t jpq_dataset_t;
typedef struct jpq_query_t jpq_query_t;
// Function to prepare query
jpq_query_t* prepare_query(jpq_dataset_t* dataset, const float* query);
// Function to free query
void free_query(jpq_query_t* query_handle);
// Function to compute dot product similarities
void compute_dp_similarities(jpq_query_t* query_handle, const int32_t* node_ids, float* similarities, int64_t n_nodes);
void run_jpq_test_cohere(void);
void initialize(void);
float* allocate_results(int32_t length);
int32_t* allocate_node_ids(int32_t length);