jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeGpuOps.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * jpq_query_t *prepare_query(jpq_dataset_t *dataset, const float *query)
     * }
     */
    public static MethodHandle prepare_query$handle() {
        return prepare_query.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * jpq_query_t *prepare_query(jpq_dataset_t *dataset, const float *query)
     * }
     */
    public static MemorySegment prepare_query(MemorySegment dataset, MemorySegment query) {
        var mh$ = prepare_query.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("prepare_query", dataset, query);
            }
            return (MemorySegment)mh$.invokeExact(dataset, query);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class free_query {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeGpuOps.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("free_query"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void free_query(jpq_query_t *query_handle)
     * }
     */
    public static FunctionDescriptor free_query$descriptor() {
        return free_query.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void free_query(jpq_query_t *query_handle)
     * }
     */
    public static MethodHandle free_query$handle() {
        return free_query.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void free_query(jpq_query_t *query_handle)
     * }
     */
    public static void free_query(MemorySegment query_handle) {
        var mh$ = free_query.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("free_query", query_handle);
            }
            mh$.invokeExact(query_handle);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class compute_dp_similarities {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_LONG
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("compute_dp_similarities"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void compute_dp_similarities(jpq_query_t *query_handle, const int32_t *node_ids, float *similarities, int64_t n_nodes)
     * }
     */
    public static FunctionDescriptor compute_dp_similarities$descriptor() {
        return compute_dp_similarities.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void compute_dp_similarities(jpq_query_t *query_handle, const int32_t *node_ids, float *similarities, int64_t n_nodes)
     * }
     */
    public static MethodHandle compute_dp_similarities$handle() {
        return compute_dp_similarities.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void compute_dp_similarities(jpq_query_t *query_handle, const int32_t *node_ids, float *similarities, int64_t n_nodes)
     * }
     */
    public static void compute_dp_similarities(MemorySegment query_handle, MemorySegment node_ids, MemorySegment similarities, long n_nodes) {
        var mh$ = compute_dp_similarities.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("compute_dp_similarities", query_handle, node_ids, similarities, n_nodes);
            }
            mh$.invokeExact(query_handle, node_ids, similarities, n_nodes);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class run_jpq_test_cohere {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("run_jpq_test_cohere"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void run_jpq_test_cohere()
     * }
     */
    public static FunctionDescriptor run_jpq_test_cohere$descriptor() {
        return run_jpq_test_cohere.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void run_jpq_test_cohere()
     * }
     */
    public static MethodHandle run_jpq_test_cohere$handle() {
        return run_jpq_test_cohere.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void run_jpq_test_cohere()
     * }
     */
    public static void run_jpq_test_cohere() {
        var mh$ = run_jpq_test_cohere.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("run_jpq_test_cohere");
            }
            mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class initialize {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("initialize"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void initialize()
     * }
     */
    public static FunctionDescriptor initialize$descriptor() {
        return initialize.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void initialize()
     * }
     */
    public static MethodHandle initialize$handle() {
        return initialize.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void initialize()
     * }
     */
    public static void initialize() {
        var mh$ = initialize.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("initialize");
            }
            mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class allocate_results {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("allocate_results"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float *allocate_results(int32_t length)
     * }
     */
    public static FunctionDescriptor allocate_results$descriptor() {
        return allocate_results.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float *allocate_results(int32_t length)
     * }
     */
    public static MethodHandle allocate_results$handle() {
        return allocate_results.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * float *allocate_results(int32_t length)
     * }
     */
    public static MemorySegment allocate_results(int length) {
        var mh$ = allocate_results.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("allocate_results", length);
            }
            return (MemorySegment)mh$.invokeExact(length);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class allocate_node_ids {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeGpuOps.C_POINTER,
            NativeGpuOps.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    NativeGpuOps.findOrThrow("allocate_node_ids"),
                    DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t *allocate_node_ids(int32_t length)
     * }
     */
    public static FunctionDescriptor allocate_node_ids$descriptor() {
        return allocate_node_ids.DESC;
    }
